# homomorphic_db

./: README.md
Admin/: CMakeLists.txt  README.md  admin.cpp  generations.cpp  generations.h
Client/: CMakeLists.txt  README.md  client.py  decrypt.cpp  encrypt.cpp  encryptfiles.cpp  encryptfiles.h  verify_sign.cpp
Server/: CMakeLists.txt  README.md  comparator.cpp  database_server.py  homo_operations.cpp  path_handling.cpp  path_handling.h  server_decrypt.cpp  server_encrypt.cpp  sign_result.cpp  verify_sign.cpp
